pkg/config/analysis/analyzers/testdata/destinationrule-empty-topology-labels.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: empty-topology-labels
  namespace: default
spec:
  host: httpbin.default.svc.cluster.local
  subsets:
  - name: empty-region
    labels:
      topology.kubernetes.io/region: ""  # Empty string - should not match
  - name: app-v1
    labels:
      version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
spec:
  ports:
  - name: http
    port: 8000
  selector:
    app: httpbin
---
apiVersion: v1
kind: Pod
metadata:
  name: httpbin-pod
  namespace: default
  labels:
    app: httpbin
    version: v1
spec:
  nodeName: test-node
  containers:
  - name: httpbin
    image: httpbin
---
apiVersion: v1
kind: Node
metadata:
  name: test-node
  labels:
    kubernetes.io/hostname: test-node
    topology.kubernetes.io/region: us-west-1
    topology.kubernetes.io/zone: us-west-1a
